# app/Models/Resource.php
@@ -9,5 +9,5 @@ class Resource extends Model
 {
     use HasFactory;
 
-    protected $fillable = ['name', 'description'];
+    protected $fillable = ['name', 'email', 'password'];
 }
